adding OBS WebSocket version to settings dialog

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-OBSWebsocket.Menu.SettingsItem="Websocket server settings"
+﻿OBSWebsocket.Menu.SettingsItem="Websocket server settings"
 OBSWebsocket.Settings.DialogTitle="obs-websocket"
 OBSWebsocket.Settings.ServerEnable="Enable Websocket server"
 OBSWebsocket.Settings.ServerPort="Server Port"
@@ -7,6 +7,7 @@ OBSWebsocket.Settings.Password="Password"
 OBSWebsocket.Settings.DebugEnable="Enable debug logging"
 OBSWebsocket.Settings.RemoteServerEnable="Remote Server Enabled"
 OBSWebSocket.Settings.ServerUrl="Remote Server URL"
+OBSWebsocket.Settings.VersionLabel="OBS Websocket Version"
 OBSWebsocket.ConnectNotify.Connected="New WebSocket connection"
 OBSWebsocket.ConnectNotify.Disconnected="WebSocket client disconnected"
 OBSWebsocket.ConnectNotify.ClientIP="Client Address:"
